objects/CAPA_Effectiveness_Check__c.object
<CustomObject>
    <fields>
        <fullName>CAPA_ParentWorkFlowStatus__c</fullName>
        <formula>CAPA__r.CMPL123_WF_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAPA_ParentWorkFlowStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAPA</label>
        <referenceTo>CMPL123QMS__CAPA__c</referenceTo>
        <relationshipLabel>CAPA Effectiveness Checks</relationshipLabel>
        <relationshipName>CAPA_Effectiveness_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CAPA_Effectiveness_CheckcCMPL123_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CAPA Effectiveness Check</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAPA-EC-{00000}</displayFormat>
        <label>CAPA Effectiveness Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAPA Effectiveness Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>